--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <header id="about">
         <article>
             <div class="title">
-                <h1>>Mujeeb Rahman MV</h1>
+                <h1>Mujeeb Rahman MV</h1>
                 <summary>Senior Front-end Developer</summary>
                 <div class="button-container">
                     <button onclick="window.open('assets/docs/Rinto%20Jose%20-%20CV.pdf')">Download</button>
