--- a/index.html
+++ b/index.html
@@ -55,21 +55,21 @@
                 </a>
             </ul>
             <div class="footer">
-                <a href="tel:+919446512521" tooltip="+91 9446 512 521">
+                <a href="tel:+61481368010" tooltip="+61481368010">
                     <span class="ion-ios-telephone"></span>
                 </a>
-                <a href="mailto:rintoj@gmail.com" tooltip="rintoj@gmail.com">
+                <a href="mujeebrahmanmv@gmail.com" tooltip="mujeebrahmanmv@gmail.com">
                     <span class="ion-email"></span>
                 </a>
-                <a href="https://github.com/rintoj" tooltip="rintoj">
+                <a href="https://github.com/mvmujeeb" tooltip="mvmujeeb">
                     <span class="ion-social-github"></span>
                 </a>
-                <a href="https://twitter.com/rintoj" tooltip="@rintoj">
+                <a href="https://twitter.com/mujeeb_rahman" tooltip="@mujeeb_rahman">
                     <span class="ion-social-twitter"></span>
                 </a>
             </div>
             <div class="copyright">
-                @2017 rintoj - all rights reserved
+                @2017 MujeebRahman - all rights reserved
             </div>
         </div>
     </nav>
@@ -91,53 +91,52 @@
                 <div class="pure-g">
                     <div class="pure-u-1">
                         <div class="l-box">
-                            I'm a creative technology enthusiast and a senior full stack developer with 10 years of experience in cross-technology from Java, NodeJS, Web Apps, Hybrid Apps to creating pixel perfect websites. I derive great joy in learning new technologies as much
-                            as building and coaching great teams. Apart from photography and music, I share a true passion for AI and machine learning. I am seeking new challenging opportunities especially in web technologies, that will enable me to acquire
-                            new skills.
+                            I'm a creative technology enthusiast and a senior front-end developer with more than 9 years of experience in Web Apps, Hybrid Apps to creating pixel perfect websites. I derive great joy in learning new technologies as much as building. I am seeking new
+                            challenging opportunities especially in web technologies, that will enable me to acquire new skills.
                         </div>
                     </div>
                 </div>
             </section>
             <section id="skills" class="skills">
-                <h1><strong>Skills</strong></h1>
+                <h1><strong>Technologies</strong></h1>
                 <div class="pure-g">
                     <div class="pure-u-1 pure-u-md-1-1 pure-u-lg-1-3 pure-u-xl-1-3">
                         <div class="l-box">
                             <h3>Font-End</h3>
-                            <div class="title"><span class="ion-social-html5"></span> HTML3/CSS3/JavaScript</div>
-                            <div class="progress-bar">
-                                <div class="progress color-2" style="width: 93%"></div>
-                            </div>
-                            <div class="title"><span class="ion-social-angular"></span> Angular 2</div>
+                            <div class="title"><span class="ion-social-html5"></span> HTML5/CSS3/JavaScript</div>
                             <div class="progress-bar">
                                 <div class="progress color-2" style="width: 85%"></div>
                             </div>
-                            <div class="title"><span class="ion-social-facebook"></span> React</div>
+                            <div class="title"><span class="ion-social-angular"></span> AngulaJs</div>
                             <div class="progress-bar">
                                 <div class="progress color-2" style="width: 80%"></div>
                             </div>
-                            <div class="title"><span class="ion-social-facebook"></span> React Native</div>
+                            <div class="title"><span class="ion-social-angular"></span> Angular 2</div>
                             <div class="progress-bar">
-                                <div class="progress color-2" style="width: 78%"></div>
+                                <div class="progress color-2" style="width: 70%"></div>
+                            </div>
+                            <div class="title"><span class="ion-social-facebook"></span> Knockout.js</div>
+                            <div class="progress-bar">
+                                <div class="progress color-2" style="width: 60%"></div>
                             </div>
                         </div>
                     </div>
                     <div class="pure-u-1 pure-u-md-1-1 pure-u-lg-1-3 pure-u-xl-1-3">
                         <div class="l-box">
-                            <h3>Back-End</h3>
-                            <div class="title"><span class="ion-social-nodejs"></span> NodeJS</div>
-                            <div class="progress-bar">
-                                <div class="progress color-3" style="width: 85%"></div>
-                            </div>
-                            <div class="title"><span class="ion-soup-can"></span> MongoDB</div>
+                            <h3>Tools</h3>
+                            <div class="title"><span class="ion-social-nodejs"></span> Cordova</div>
                             <div class="progress-bar">
                                 <div class="progress color-3" style="width: 80%"></div>
                             </div>
-                            <div class="title"><span class="ion-coffee"></span> Java</div>
+                            <div class="title"><span class="ion-soup-can"></span> Protractor and Karma</div>
+                            <div class="progress-bar">
+                                <div class="progress color-3" style="width: 80%"></div>
+                            </div>
+                            <div class="title"><span class="ion-coffee"></span> SASS/LESS</div>
                             <div class="progress-bar">
                                 <div class="progress color-3" style="width: 88%"></div>
                             </div>
-                            <div class="title"><span class="ion-ios-flame"></span> J2EE/Spring</div>
+                            <div class="title"><span class="ion-ios-flame"></span> Gulp/Grunt</div>
                             <div class="progress-bar">
                                 <div class="progress color-3" style="width: 80%"></div>
                             </div>
@@ -150,17 +149,13 @@
                             <div class="progress-bar">
                                 <div class="progress" style="width: 75%"></div>
                             </div>
-                            <div class="title"><span class="ion-paintbrush"></span> Visual Designer</div>
+                            <div class="title"><span class="ion-ios-flame"></span> Energy</div>
                             <div class="progress-bar">
-                                <div class="progress" style="width: 80%"></div>
+                                <div class="progress" style="width: 60%"></div>
                             </div>
-                            <div class="title"><span class="ion-ios-analytics"></span> Reference Data Management</div>
+                            <div class="title"><span class="ion-cash"></span> Banking </div>
                             <div class="progress-bar">
-                                <div class="progress" style="width: 65%"></div>
-                            </div>
-                            <div class="title"><span class="ion-cash"></span> Banking & Insurance</div>
-                            <div class="progress-bar">
-                                <div class="progress" style="width: 62%"></div>
+                                <div class="progress" style="width: 90%"></div>
                             </div>
                         </div>
                     </div>
