--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a href="tel:+61481368010" tooltip="+61481368010">
                     <span class="ion-ios-telephone"></span>
                 </a>
-                <a href="mujeebrahmanmv@gmail.com" tooltip="mujeebrahmanmv@gmail.com">
+                <a href="mailto:mujeebrahmanmv@gmail.com" tooltip="mujeebrahmanmv@gmail.com">
                     <span class="ion-email"></span>
                 </a>
                 <a href="https://github.com/mvmujeeb" tooltip="mvmujeeb">
@@ -370,9 +370,9 @@
                         <div class="l-box">
                             <span class="icon ion-university"></span>
                             <div class="content ">
-                                <summary>June 2003 - April 2007</summary>
-                                <h3>Bachelor of Engineering <small>in Computer Science</small></h3>
-                                <p>Anna University, Chennai | <strong>83%</strong></p>
+                                <summary>2004 - 2007</summary>
+                                <h3>Master of Computer Applicatios <small>in Computer Science</small></h3>
+                                <p>Uniniversity of Calicut</p>
                             </div>
                         </div>
                     </div>
@@ -381,9 +381,9 @@
                         <div class="l-box">
                             <span class="icon ion-university"></span>
                             <div class="content ">
-                                <summary>April 2003</summary>
-                                <h3>STANDARD XII / H.S.C. <small>in Computer Science</small></h3>
-                                <p>Board of HSE, Kerala Government | <strong>81%</strong></p>
+                                <summary>2001 - 2004</summary>
+                                <h3>Bachelor of Science <small>in Mathematics</small></h3>
+                                <p>Uniniversity of Calicut</p>
                             </div>
                         </div>
                     </div>
@@ -393,8 +393,8 @@
                             <span class="icon ion-university"></span>
                             <div class="content ">
                                 <summary>April 2001</summary>
-                                <h3>SSC.</h3>
-                                <p>Board of HSE, Kerala Government | <strong>70%</strong></p>
+                                <h3>STANDARD XII / H.S.C.</h3>
+                                <p>Board of HSE, Kerala Government</p>
                             </div>
                         </div>
                     </div>
@@ -407,33 +407,27 @@
                         <div class="l-box">
                             <span class="icon ion-ios-location "></span>
                             <span class="content ">
-                                <div>#S8F, Skyline Ivy League Apartments</div>
-                                <div>Thalakkottumoola Rd, Erankulam</div>
-                                <div>Kerala 682030, India</div>
+                                <div>4/23 Princess St</div>
+                                <div>Fawkner</div>
+                                <div>VIC 3060, Australia</div>
                             </span>
                         </div>
                     </div>
                     <div class="pure-u-1 pure-u-md-1-1 pure-u-lg-1-2 ">
                         <div class="l-box">
                             <span class="icon ion-email "></span>
-                            <a class="content " href="mailto:rintoj@gmail.com ">rintoj@gmail.com</a>
+                            <a class="content " href="mailto:mujeebrahmanmv@gmail.com ">mujeebrahmanmv@gmail.com</a>
                         </div>
                         <div class="l-box">
                             <span class="icon ion-ios-telephone "></span>
-                            <a class="content " href="tel:+919446512521 ">(+91) 9446 512 521</a>
+                            <a class="content " href="tel:+61481368010 ">(+61) 481 368 010</a>
                         </div>
                     </div>
                 </div>
             </section>
-            <section id="likes">
-                <h1><strong>REFERENCES</strong></h1>
-                <blockquote>
-                    References available upon request.
-                </blockquote>
-            </section>
             <section class="only-print">
                 <h1></h1>
-                <strong class="light">A copy of this resume can be viewed online @ <a href="https://rintoj.github.io/cv">https://rintoj.github.io/cv</a></strong>
+                <strong class="light">A copy of this resume can be viewed online @ <a href="https://mvmujeeb.github.io/cv">https://mvujeeb.github.io/cv</a></strong>
             </section>
         </article>
     </main>
