--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <div class="progress-bar">
                                 <div class="progress color-2" style="width: 70%"></div>
                             </div>
-                            <div class="title"><span class="ion-social-facebook"></span> Knockout.js</div>
+                            <div class="title"><span class="ion-social-javascript"></span> Knockout.js</div>
                             <div class="progress-bar">
                                 <div class="progress color-2" style="width: 60%"></div>
                             </div>
@@ -121,19 +121,19 @@
                     <div class="pure-u-1 pure-u-md-1-1 pure-u-lg-1-3 pure-u-xl-1-3">
                         <div class="l-box">
                             <h3>Tools</h3>
-                            <div class="title"><span class="ion-social-nodejs"></span> Cordova</div>
+                            <div class="title"><span class="ion-android-phone-portrait"></span> Cordova</div>
                             <div class="progress-bar">
                                 <div class="progress color-3" style="width: 80%"></div>
                             </div>
-                            <div class="title"><span class="ion-soup-can"></span> Protractor and Karma</div>
+                            <div class="title"><span class="ion-social-reddit-outline"></span> Protractor and Karma</div>
                             <div class="progress-bar">
                                 <div class="progress color-3" style="width: 80%"></div>
                             </div>
-                            <div class="title"><span class="ion-coffee"></span> SASS/LESS</div>
+                            <div class="title"><span class="ion-social-sass"></span> SCSS/LESS</div>
                             <div class="progress-bar">
                                 <div class="progress color-3" style="width: 88%"></div>
                             </div>
-                            <div class="title"><span class="ion-ios-flame"></span> Gulp/Grunt</div>
+                            <div class="title"><span class="ion-android-settings"></span> Gulp/Grunt</div>
                             <div class="progress-bar">
                                 <div class="progress color-3" style="width: 80%"></div>
                             </div>
@@ -153,6 +153,10 @@
                             <div class="title"><span class="ion-cash"></span> Banking </div>
                             <div class="progress-bar">
                                 <div class="progress" style="width: 90%"></div>
+                            </div>
+                            <div class="title"><span class="ion-ios-people"></span> Social Network</div>
+                            <div class="progress-bar">
+                                <div class="progress" style="width: 40%"></div>
                             </div>
                         </div>
                     </div>
@@ -191,21 +195,43 @@
                         <div class="l-box">
                             <span class="icon ion-ios-calendar "></span>
                             <div class=" content ">
-                                <summary>Jan 2014 - Nov 2014</summary>
-                                <h3>IT Analyst - Project Lead</h3>
+                                <summary>May 2013 - Apr 2015</summary>
+                                <h3>IT Analyst - Tech Lead</h3>
                                 <p>Tata Consultancy Services | Kochi, Kerala
                                 </p>
                                 <p class="content">
-                                    As an IT analyst, I designed and developed a web application to customize the middle-ware product build on top of WSO2 products, through a drag-drop facility and lead the team to successful completion. While executing this project, I gained experience
-                                    in WSO2 Carbon middle-ware products, OSGi Framework, Hazelcast and about mobility solutions and it's security risks.
+                                    In this role I was leading a 10 member project TCS BaNCS Digital suite, TCS BaNCS Digital suites is an enterprise wide solution that enables your bank to give your customers the flexibility and convenience of managing their finances anywhere. The solution
+                                    is easily deployable and scalable and caters to retail and corporate banking (focused on small and medium businesses (SMBs)). The TCS BaNCS Digital suites consist of both Mobile and Web application and targeting all
+                                    main form factors. Mobile application is a hybrid mobile application for iOS and Android. For this project we have decided to go with AngularJs as javaScript framework.
                                 </p>
                                 <p class="content">
                                     <i>
-                    <span class="b">J2EE</span>
-                    <span class="b">Web Service</span>
+                    <span class="b">AngularJs</span>
+                    <span class="b">HTML5/CSS3/JavaScript</span>
+                    <span class="f">JQuery</span>
+                    <span class="b">RWD</span>
+                    <span class="b">Cordova</span>
+                  </i>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="l-box">
+                            <span class="icon ion-ios-calendar "></span>
+                            <div class="content ">
+                                <summary>Apr 2012 - May 2013</summary>
+                                <h3>IT Analyst - Module lead</h3>
+                                <p>Tata Consultancy Services | Kochi, Kerala</p>
+                                <p class="content">
+                                    This is my first role in TCS. In this role I was leading a four member team for one of our internal product, Hy5 Presidio(Mobile device management tool). Technically I introduced some new tools this project.
+                                </p>
+                                <p class="content">
+                                    <i>
+                    <span class="f">HTMl 5</span>
+                    <span class="f">JavaScript</span>
+                    <span class="b">CSS 3</span>
+                    <span class="b">Bootstrap</span>
+                    <span class="b">RWD</span>
                     <span class="f">JQuery (+UI/Mobile)</span>
-                    <span class="b">WSO2 Carbon</span>
-                    <span class="b">OSGi Framework</span>
                   </i>
                                 </p>
                             </div>
@@ -213,45 +239,27 @@
                         <div class="l-box">
                             <span class="icon ion-ios-calendar "></span>
                             <div class="content ">
-                                <summary>Sept 2011 - Dec 2013</summary>
-                                <h3>Associate - Senior Solution Developer</h3>
-                                <p>Cognizant Technology Solutions | Kochi, Kerala</p>
-                                <p class="content">
-                                    As a senior developer, I designed and implemented two web-applications for insurance domain using MVC pattern in JavaScript (DOJO) and automated tests using DOH - a JavaScript based testing framework and Selenium. I received an excellence award from client
-                                    for quality and design of the product delivered.
-                                </p>
-                                <p class="content">
-                                    <i>
-                    <span class="f">DOJO (JS)</span>
-                    <span class="f">DOH Testing Framework</span>
-                    <span class="b">Spring</span>
-                    <span class="b">Hibernate</span>
-                    <span class="b">Mercurial</span>
-                    <span class="b">Selenium</span>
-                  </i>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="l-box">
-                            <span class="icon ion-ios-calendar "></span>
-                            <div class="content ">
-                                <summary>Jun 2009 - Sep 2011</summary>
+                                <summary>Jan 2010 - Mar 2012</summary>
                                 <h3>Senior Software Developer</h3>
-                                <p>Wipro Technologies | Zurich, Switzerland</p>
+                                <p>Cabot Technology Solutions Pvt Ltd. Kochi, Kerala</p>
                                 <p class="content">
-                                    In this role, I worked on a <i>Client Reference Data</i> management system for a client in investment banking sector. I received appreciation from the client for implementing reusable utilities, played a key role during
-                                    the investigation of major technical issues in the system, designing and building solutions.
+                                    In this role, I worked in <i>Fan2Band</i>, <i>Beastly.com</i> an hollywood movie website. As a senior developer I played key role for designing architecture of several projects in this company. I also worked on some
+                                    facebook appilcations in this duration. In this role I also started some mobile web apps developement using JQuery Mobile and JQtouch.
                                 </p>
                                 <p class="content">
                                     <i>
-                    <span class="b">Java</span>
-                    <span class="b">SQL/PL-SQL</span>
-                    <span class="b">Oracle 10g</span>
-                    <span class="b">Informatica</span>
-                    <span class="b">Perl</span>
-                    <span class="b">Unix Script</span>
-                    <span class="b">AutoSys</span>
-                    <span class="b">NetCool</span>
+                    <span class="b">PHP</span>
+                    <span class="b">MySQL</span>
+                    <span class="b">Yee</span>
+                    <span class="b">CodeIgniter</span>
+                    <span class="b">HTML</span>
+                    <span class="b">JavaScript</span>
+                    <span class="f">JQuery</span>
+                    <span class="f">JQtouch,JQuery Mobile</span>
+                    <span class="b">CSS</span>
+                    <span class="b">Flex</span>
+                    <span class="b">FBML(Facebook Markup Language)</span>
+
                   </i>
                                 </p>
                             </div>
@@ -259,21 +267,38 @@
                         <div class="l-box">
                             <span class="icon ion-ios-calendar "></span>
                             <div class="content ">
-                                <summary>Jun 2007 - May 2009</summary>
+                                <summary>Jun 2008 - Jan 2010</summary>
                                 <h3>Software Developer</h3>
-                                <p>Wipro Technologies | Bangalore, India</p>
+                                <p>Cabot Technology Solutions Pvt Ltd. Kochi, Kerala</p>
                                 <p class="content">
-                                    This was my first stepping stone project that helped me understand software development as a whole, Golden Source data model and ETL solutioning for <i>Reference Data Management</i> in particular. I received trainings
-                                    in Banking and Financial Securities domain. The client awarded me with <i>Best Performer Award</i> for excellence.
+                                    In this role, I worked in <i>Fan2Band</i>, social web marketing solutions that leverages social networks and peer-to-peer influence to spread brand awareness. I received <i>Star of Month</i> award in Nov 2008 for playing
+                                    a key role during the investigation of major technical issues in the system, designing and building solutions.
                                 </p>
                                 <p class="content">
                                     <i>
-                    <span class="b">Java/J2EE</span>
-                    <span class="b">SQL/PL-SQL</span>
-                    <span class="b">SQL Optimization & Partitioning</span>
-                    <span class="b">Perl & Unix Scripting</span>
-                    <span class="b">Pro*C/C++</span>
-                    <span class="b">XML</span>
+                    <span class="b">PHP</span>
+                    <span class="b">MySQL</span>
+                    <span class="b">HTML</span>
+                    <span class="b">JavaScript</span>
+                    <span class="b">CSS</span>
+
+                  </i>
+                                </p>
+                            </div>
+                        </div>
+                        <div class="l-box">
+                            <span class="icon ion-ios-calendar "></span>
+                            <div class="content ">
+                                <summary>Nov 2007 - Jun 2008</summary>
+                                <h3>Software Developer</h3>
+                                <p>Mega Trend systems Pvt Ltd. Kochi, Kerala</p>
+                                <p class="content">
+                                    This was my first stepping stone project that helped me understand software development as a whole. I started my career as web applicaion developer in PHP MySQL.
+                                </p>
+                                <p class="content">
+                                    <i>
+                    <span class="b">PHP</span>
+                    <span class="b">MySQL</span>
                   </i>
                                 </p>
                             </div>
