--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A infinite virtual scroll for angular 2">
+    <meta name="description" content="About Mujeeb Rahman MV">
     <title>Mujeeb Rahman MV</title>
     <link rel="apple-touch-icon" sizes="57x57" href="assets/icon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="assets/icon/apple-icon-60x60.png">
