--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h1>Mujeeb Rahman MV</h1>
                 <summary>Senior Front-end Developer</summary>
                 <div class="button-container">
-                    <button onclick="window.open('assets/docs/Rinto%20Jose%20-%20CV.pdf')">Download</button>
+                    <button onclick="window.open('assets/docs/Mujeeb_Rahman_MV.pdf')">Download</button>
                 </div>
             </div>
         </article>
